--- a/complaint.html
+++ b/complaint.html
@@ -12,7 +12,7 @@
     <br>
     <br>
 
-    <h2>Samples Page</h2>
+    <h2>Complaints and Resolution page</h2>
 
     <a href="./index.html">Landing Page</a>
 
